--- a/public/assets/sass/base/_variables.sass
+++ b/public/assets/sass/base/_variables.sass
@@ -16,7 +16,7 @@ $h5-size: 20px
 $h6-size: 16px
 
 // Colors
-$colors: (base-color: rgba(255, 255, 255, 0.65), heading-color: #FFFFFF, primary-color: #C9F31D, lighter-color: #1F1F1F, black-color: #070707, border-color: rgba(255, 255, 255, 0.10))
+$colors: (base-color: rgba(255, 255, 255, 0.65), heading-color: #FFFFFF, primary-color: #52ceea, lighter-color: #1F1F1F, black-color: #070707, border-color: rgba(255, 255, 255, 0.10))
 
 $base-color: var(--base-color)
 $heading-color: var(--heading-color)
