--- a/public/assets/sass/sections/_projects.sass
+++ b/public/assets/sass/sections/_projects.sass
@@ -76,7 +76,7 @@
         transition: 0.5s
         max-height: 100%
         +size(100%, 250px)
-        background: linear-gradient(180deg, rgba(201, 243, 29, 0.00) 0%, #C9F31D 100%)
+        background: linear-gradient(180deg, rgba(201, 243, 29, 0.00) 0%, #52ceea 100%)
     .project-image
         margin-bottom: 0
     .project-content
