--- a/public/assets/sass/sections/_header.sass
+++ b/public/assets/sass/sections/_header.sass
@@ -110,6 +110,7 @@
         width: 100%
     .mobile-logo
         margin-right: auto
+        width: 150px
         +res-bl(sm)
             max-width: 150px
     .collapse
